# weatherng

./: .env.example  Cargo.toml  README.md  windrose.php
src/: austria.geojson  index.html  main.rs  mcp.rs  web.rs
