[package]
name = "weatherng"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
elasticsearch = "8.19.0-alpha.1" 
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json"] }
